<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="com.example.android.inventoryproject.ViewDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:orientation="vertical">

        <LinearLayout style="@style/ContainerLayoutStyle">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_name" />

            <TextView
                android:id="@+id/edit_name"
                style="@style/ProductDetailsStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ContainerLayoutStyle">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <TextView
                android:id="@+id/edit_price"
                style="@style/ProductDetailsStyle"
                android:layout_marginLeft="@dimen/small_margin" />

            <TextView
                android:id="@+id/label_price_units"
                style="@style/UnityLabelStyle"
                android:text="@string/price_unity" />
        </LinearLayout>


        <LinearLayout style="@style/ContainerLayoutStyle">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <Button
                    android:id="@+id/minus_one_quantity_button"
                    style="@style/QuantityButtonStyle"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:text="@string/quantity_minus_button" />

                <TextView
                    android:id="@+id/edit_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/plus_one_quantity_button"
                    style="@style/QuantityButtonStyle"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:text="@string/quantity_plus_button" />
            </LinearLayout>

            <TextView
                android:id="@+id/label_quantity_units"
                style="@style/UnityLabelStyle"
                android:text="@string/quantity_unity" />
        </LinearLayout>


        <LinearLayout style="@style/ContainerLayoutStyle">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier_name" />

            <TextView
                android:id="@+id/edit_supplier_name"
                style="@style/ProductDetailsStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ContainerLayoutStyle">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier_phone_number" />

            <TextView
                android:id="@+id/edit_supplier_phone"
                style="@style/ProductDetailsStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_margin"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="@style/BottomButtonStyle"
                android:layout_marginRight="@dimen/large_margin"
                android:text="@string/delete" />

            <Button
                android:id="@+id/order_button"
                style="@style/BottomButtonStyle"
                android:text="@string/order" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>