<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/medium_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/very_small_margin"
        android:layout_marginRight="@dimen/extra_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            style="@style/TitleStyle"
            android:layout_marginLeft="@dimen/very_small_margin"
            android:text="@string/title_name"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price"
            style="@style/TitleStyle"
            android:layout_marginLeft="@dimen/small_margin"
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/medium_padding"
            android:text="@string/title_price" />

        <TextView
            android:id="@+id/quantity"
            style="@style/TitleStyle"
            android:text="@string/title_quantity" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_view_fruits"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_container"
        android:dividerHeight="@dimen/listview_divider"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/empty_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/empty_text_view" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/medium_margin"
        android:src="@drawable/round_input_white_18" />

</RelativeLayout>